--- a/style/style.css
+++ b/style/style.css
@@ -19,16 +19,19 @@ main {
   color: #562eff;
   font-size: 1.5rem;
   font-weight: 500;
+  margin-top: 0.19rem;
 }
 .players {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   /* grid-template-columns: 1fr 1fr 1fr;  */
+  grid-row-gap: 0.19rem;
 }
 .player {
   display: flex;
   align-items: center;
   padding: 2.75rem 0;
+  padding-top: 0rem;
 }
 .player img {
   width: 4rem;
@@ -39,5 +42,17 @@ main {
   color: #000;
   font-size: 1.125rem;
   font-weight: 500;
+}
+hr {
+  background-color: #d1d1d1;
+  margin: 0;
+}
+/* top blog start  */
+.blog .thumbnail img {
+  width: 14rem;
+  height: 7.9375rem;
+}
+.blog {
+  display: flex;
 }
 /* Main End */
